RESOLVED FIXED12827
REGRESSION(r19183): -[DOMCSSStyleDeclaration setValue:forKey:] doesn't have an immediate effect
https://bugs.webkit.org/show_bug.cgi?id=12827
Summary REGRESSION(r19183): -[DOMCSSStyleDeclaration setValue:forKey:] doesn't have a...
Timothy Hatcher
Reported 2007-02-19 23:26:03 PST
- Build and run the attached project, and click Move Up. - In Tiger, when you click on the "move up" button, you will see that "Test" immediately moves up. - In TOT, you will not see the change until you move your mouse button over the WebView. This is not just a problem with the setValue:forKey: or setValue:forKeyPath: cases, the direct setProperty:value:priority: method also fails to layout or render the change. Using the nightlies, this regressed between r19136 and r19186.
Attachments
Testcase (32.39 KB, application/zip)
2007-02-19 23:26 PST, Timothy Hatcher
no flags
patch (1.36 KB, patch)
2007-02-20 12:18 PST, Geoffrey Garen
mitz: review+
Timothy Hatcher
Comment 1 2007-02-19 23:26:40 PST
Created attachment 13267 [details] Testcase
Timothy Hatcher
Comment 2 2007-02-20 01:06:34 PST
This was caused by r19183.
Geoffrey Garen
Comment 3 2007-02-20 11:03:24 PST
I'll have a look.
Geoffrey Garen
Comment 4 2007-02-20 12:18:24 PST
mitz
Comment 5 2007-02-20 12:47:00 PST
Comment on attachment 13278 [details] patch !(r!=me)
Geoffrey Garen
Comment 6 2007-02-20 13:43:54 PST
Committed revision 19742.
Note You need to log in before you can comment on or make changes to this bug.