        Not not reviewed by Mitz Pettel.

Fixed http://bugs.webkit.org/show_bug.cgi?id=12827 | <rdar://problem/5006671>
        REGRESSION: -[DOMCSSStyleDeclaration setValue:forKey:] doesn't have an
        immediate effect

        Let's just pretend this never happened.

        I attempted a layout test but I couldn't get the old code to fail because
        there's no obvious way to isolate the ObjC bindings in a test that's
        controlled by JS.

        * bindings/objc/WebScriptObject.mm:
        (_didExecute):



Canonical link: https://commits.webkit.org/16599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19742 268f45cc-cd09-0410-ab3c-d52691b4dbfc